--- a/CriteoAdViewer/Sources/MRAID Ads/MraidScriptTag.html
+++ b/CriteoAdViewer/Sources/MRAID Ads/MraidScriptTag.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <script src="mraid.js"></script>
+        <script type="text/javascript" src="mraid.js"></script>
         <p><b>MRAID script tag =)</b></p>
     </body>
 </html>
